Change index + css for darkmode

--- a/index.html
+++ b/index.html
@@ -44,8 +44,8 @@
 
 
    <header class="header-container">                                                        <!-- main-nav -->
-       <img class="kopf" src="bilder/Kopf.jpeg" alt="Kopf">
-       
+       <button onclick="toggleDarkMode()"><img class="kopf" src="bilder/Kopf.jpeg" alt="Kopf"></button>    
+         
        <div class="main-nav">
           <h1 class="allgemeiner-deutscher">Allgemeiner Deutscher Wanderer und Fahrradfahrer Club &#x1F474; &#x1F97E;</h1>
           <p class="internetauftritt">- Internetauftritt der<a href="auth.html">WaFas</a></p>
