--- a/index.html
+++ b/index.html
@@ -44,9 +44,9 @@
 
 
    <header class="header-container">                                                        <!-- main-nav -->
-       <button onclick="toggleDarkMode()"><img class="kopf" src="bilder/Kopf.jpeg" alt="Kopf"></button>    
+<!----><button onclick="toggleDarkMode()"><img class="kopf" src="bilder/Kopf.jpeg" alt="Kopf"></button>    
          
-       <div class="main-nav">
+<!----><div class="main-nav">
           <h1 class="allgemeiner-deutscher">Allgemeiner Deutscher Wanderer und Fahrradfahrer Club &#x1F474; &#x1F97E;</h1>
           <p class="internetauftritt">- Internetauftritt der<a href="auth.html">WaFas</a></p>
           <ul><li><a href="index.html">Homepage</a></li>
@@ -57,7 +57,7 @@
           </ul>
        </div>
 
-       <nav class="springe-zu">                                                             <!-- Springe zu -->
+<!----><nav class="springe-zu">                                                             <!-- Springe zu -->
           <ul class="springe-links">
               <li>Springe zu:</li>
               <li><a href="#Verfassung">Verfassung</a></li>
