--- a/auth.html
+++ b/auth.html
@@ -11,12 +11,14 @@
   <link href="https://fonts.googleapis.com/css2?family=Charmonman&display=swap" rel="stylesheet">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
+  <script src="script.js"></script>
+  
 </head>
 
 
 <body>
 
-  <div class ="login">
+  <div class ="login" autocomplete="off">
 
       <h2>Login ADWFC</h2>
 
@@ -30,7 +32,7 @@
       
           <div class="login-pw">
             <label for="password">Passwort:</label>
-            <input type="password" id="password" placeholder="🗝️" required>
+            <input type="password" id="password" placeholder="🗝️" required autocomplete="new-password">
             <button id="login-button">&#10004;</button></div>
 
       </div>
