--- a/texte/Kontakt.html
+++ b/texte/Kontakt.html
@@ -4,7 +4,7 @@
          <meta name="author" content="&Eacute;mile Jeremias Ruff">
          <link rel="icon" type="image/png" href="../favicon.ico">
 
-         <link rel="stylesheet" href="../stylesheet.css?v=<?= filemtime('style.css'); ?" type="text/css">
+         <link rel="stylesheet" href="../stylesheet.css" type="text/css">
          <link href="https://fonts.googleapis.com/css2?family=Lora:wght@400;700&display=swap" rel="stylesheet">
          <link href="https://fonts.googleapis.com/css2?family=Charmonman&display=swap" rel="stylesheet">
          <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -43,11 +43,11 @@
           <!--h1 class="allgemeiner-deutscher">ADWFC &#x1F474; &#x1F97E;</h1-->
           <p class="internetauftritt">- Internetauftritt der<a href="../auth.html">WaFas</a></p>
           <ul>
-              <li><a href="../index.html">Homepage</a></li>
+              <li><a href="../index">Homepage</a></li>
               <li><b>|</b></li>
-              <li><a href="Mitglieder.html">Mitglieder</a></li>
+              <li><a href="Mitglieder">Mitglieder</a></li>
               <li><b>|</b></li>
-              <li><a href="Kontakt.html">Kontakt</a></li>
+              <li><a href="Kontakt">Kontakt</a></li>
           </ul>
       </div>
 
@@ -62,7 +62,7 @@
 
     <main>
 
-         <p id="kontakt">Folgend unser Kontaktformular. Dieses ist alternativ auch <a href="https://tally.so/r/npkVG8">hier</a> zu erreichen. <br>
+         <p id="kontakt">Folgend unser Kontaktformular. Dieses ist alternativ auch <a href="https://tally.so/r/npkVG8"><u>hier</u></a> <img src="../bilder/extern-icon.svg" width="15" height="auto" style="vertical-align: middle;"> zu erreichen. <br>
          Das Formular wird von <i>Tally</i> zu Verf&uuml;gung gestellt, einem externen Dritten. Bitte beachten Sie, dass dieser <b>ebenfalls Zugriff</b> auf die Daten hast, die Sie uns hier &uuml;bermitteln.<br>
          F&uuml;r vertrauliche Informationen k&ouml;nnen Sie uns im Anliegen-Feld auch einfach bitten, unabh&auml;ngig per Mail kontaktiert zu werden.</p>
 
@@ -73,14 +73,14 @@
          .forEach((function(e){e.src=e.dataset.tallySrc}))};if("undefined"!=typeof Tally)v();else if(d.querySelector('script[src="'+w+'"]')==null){var s=d.createElement("script");s.src=w,s.onload=v,
          s.onerror=v,d.body.appendChild(s);}</script>
 
-    </main>
-
 
    <footer>
          <hr size="1" noshade>
-         <p >&copy; 2025 by &Eacute;mile Jeremias Ruff</p>
-   </footer>
-
+         <p class="impressum"><a href="Impressum">Impressum</a></p>
+   </footer>   
+  
+   </main>
+  
    <!--             Ende geschützter Inhalt           -->
    </geschuetzt>
 
